# zellij-attention

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo.webm
src/: config.rs  lib.rs  main.rs  state.rs  tests.rs
