[package]
name = "zellij-attention"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
zellij-tile = "0.43.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
